*
Release 1.1.1 Start 12/09/2022
======= Release Highlights ================================================
===========================================================================
- 12/09/2022
01. Added runpod command to execute indimail-mta, indimail in a containerized
    pod
- 18/09/2022
02.  instcheck.in: use uininstaller only for ucspi-tcp
- 19/09/2022
03. runpod: added SYS_NICE capability to defaults
- 01/11/2022
04. runpod: fixed port clash
- 07/11/2022
05. runpod: prevent output of test on stdout
- 08/11/2022
06. runpod: added case for name=svscan to run in foreground
- 09/11/2022
07. docker-entrypoint: fixed fix-queue argument for slowq
08. svps.in, minisvc.in, qmailctl.sh: replaced deprecated egrep with grep -E
- 10/11/2022
09. docker-entrypoint: fixed extra_args variable getting clobbered.
- 14/11/2022
10. minisvc: when importing variables don't treat existing variables as error
- 17/11/2022
11. qmailctl.sh: made dash portable
- 27/11/2022
12. moved set-network-wait to Linux specific LIBEXEC
- 02/12/2022
13. supervise.c: sleep SCANINTERVAL seconds if supervise for waited service is
    not running
14. svscan.c: use 'down' file to start or stop service automatically
15. svscan.c: scan immediately instead of SCANINTERVAL on termination of a
    supervised service if SCANNOW env variable is set
- 07/12/2022
16. runpod: run bash in foreground if name is test, devel
17. runpod: added port 8081 for mapping to port 443 on container OS
- 08/12/2022
18. runpod: fixed setting of arguments passed to docker-entrypoint
- 13/12/2022
19. supervise.c: added subreaper mode using prctl(2) PR_SET_CHILD_SUBREAPER on
    Linux or procctl(2) PROC_REAP_ACQUIRE on FreeBSD.
20. subreaper.c, subreaper.h: added subreaper function
21. supervise.c, svscan.c: display exit status and termination signal
- 14/12/2022
22. svscan.c: added -v, -s option to control logging of info, warn messages
23. supervise.c: use VERBOSE, SILENT environment variables to control logging